internal/testdata/golden/31-pos-egress-cidr/expected.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pos
  namespace: cf2cnp-lab
  labels:
    app.kubernetes.io/managed-by: cf2cnp
    app.kubernetes.io/name: pos
spec:
  description: 'Allow egress from pos in cf2cnp-lab: to shop on TCP/80; to kube-dns in kube-system on UDP/53; to 104.20.23.154/32 on TCP/443'
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: pos
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: shop
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    - toCIDR:
        - 104.20.23.154/32
    # To allow all traffic to world instead of specific IPs, replace toCIDR with:
    # - toEntities:
    #     - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
